[package]
name = "silverpoint"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.7.1", features = ["rb-sys"] }
rb-sys = "0.9"
chess-engine = "0.1.2"
